--- a/src/main/resources/templates/productInquiryList.html
+++ b/src/main/resources/templates/productInquiryList.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login and Refistration Form</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.css"/>
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
     <style>
       * {
         margin: 0;
@@ -91,7 +95,7 @@
       /*****************************************************************/
 
       .form-box {
-        width: 1280px;
+        width: 1500px;
         height: 800px;
         position: relative;
         margin: 3% auto;
@@ -183,10 +187,11 @@
       .content-table {
         position: relative;
         border-collapse: collapse;
-        margin: auto 18%;
+        margin: auto ;
+        width: 100%;
         min-width: 800px;
         max-height: 1000px;
-        font-size: 1.2em;
+        font-size: 0.9em;
         border-radius: 5px 5px 0 0;
         overflow: hidden;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -247,24 +252,30 @@
           <div class="title">
             <h2 id="h2-title">Product Inquiry List</h2>
           </div>
-          <table class="table table-bordered table-striped " id="productinquiry-table">
+          <table class="content-table table table-bordered table-striped " id="productinquiry-table">
             <thead>
               <tr>
                 <th>Id</th>
-                <th>Enquiry No</th>
-                <th>Product</th>
+                <th>UUID</th>
+                <th>Product Category</th>
                 <th>Details</th>
-                <th>Email</th>
+                <th>E-mail</th>
                 <th>Action</th>
+                <th>Answer</th>
               </tr>
             </thead>
             <tbody>
               <tr th:each="productInquiry:${productInquiry}">
                 <td th:text="${productInquiry.id}"/>
+                <td th:text="${productInquiry.uuid}"/>
                 <td th:text="${productInquiry.productCategory}"/>
                 <td th:text="${productInquiry.details}"/>
                 <td th:text="${productInquiry.mail}"/>
-                <td>dgadg</td>
+                <td>
+                  <a href="#" class="btn btn-info">Update</a>
+                  <a href="#" class="btn btn-info">Delete</a>
+                </td>
+                <td th:text="${productInquiry.answer}"/>
               </tr>
 
             </tbody>
