--- a/src/main/resources/templates/productInquiryList.html
+++ b/src/main/resources/templates/productInquiryList.html
@@ -1,294 +1,240 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login and Refistration Form</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.css"/>
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous">
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        font-family: sans-serif;
-      }
-      .hero {
-        height: 100%;
-        width: 100%;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url(https://cdn.wperp.com/uploads/2019/08/231-1920x768.png);
-        background-position: center;
-        background-size: cover;
-        position: absolute;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login and Refistration Form</title>
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.css"/>
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+    }
+    .hero {
+      height: 100%;
+      width: 100%;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url(https://cdn.wperp.com/uploads/2019/08/231-1920x768.png);
+      background-position: center;
+      background-size: cover;
+      position: absolute;
+    }
 
-      /*****************************************************************/
-      header {
-        box-sizing: border-box;
-        backdrop-filter: blur(10px);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 20px 3%;
-        color: white;
-      }
+    /*****************************************************************/
+    header {
+      box-sizing: border-box;
+      backdrop-filter: blur(10px);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 3%;
+      color: white;
+    }
 
-      .nav__links li a {
-        color: black;
-        background-color: rgba(0, 136, 169, 1);
-        backdrop-filter: blur(10px);
-        border: #777;
-        border-radius: 50px;
-        cursor: pointer;
-        transition: all 0.3s ease 0s;
-        text-decoration: none;
-        font-size: 14px;
-        padding: 9px 6px;
-      }
+    .nav__links li a {
+      color: black;
+      background-color: rgba(0, 136, 169, 1);
+      backdrop-filter: blur(10px);
+      border: #777;
+      border-radius: 50px;
+      cursor: pointer;
+      transition: all 0.3s ease 0s;
+      text-decoration: none;
+      font-size: 14px;
+      padding: 9px 6px;
+    }
 
-      .input-opt {
-        padding: 9px 5px;
-        background-color: rgba(0, 136, 169, 1);
-        border: none;
-        border-radius: 50px;
-        cursor: pointer;
-        transition: all 0.3s ease 0s;
-      }
-      .input-opt optgroup {
-        padding: 9px 5px;
-        background-color: rgba(0, 136, 169, 1);
-        border: none;
-        border-radius: 50px;
-        cursor: pointer;
-        transition: all 0.3s ease 0s;
-      }
+    .input-opt {
+      padding: 9px 5px;
+      background-color: rgba(0, 136, 169, 1);
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      transition: all 0.3s ease 0s;
+    }
+    .input-opt optgroup {
+      padding: 9px 5px;
+      background-color: rgba(0, 136, 169, 1);
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      transition: all 0.3s ease 0s;
+    }
 
-      header button:hover {
-        background-color: rgba(0, 136, 169, 0.8);
-      }
+    header button:hover {
+      background-color: rgba(0, 136, 169, 0.8);
+    }
 
-      .logo {
-        cursor: pointer;
-      }
+    .nav__links {
+      list-style: none;
+    }
 
-      .nav__links {
-        list-style: none;
-      }
+    .nav__links li {
+      display: inline-block;
+      padding: 0px 20px;
+    }
 
-      .nav__links li {
-        display: inline-block;
-        padding: 0px 20px;
-      }
+    .nav__links li a {
+      transition: all 0.3s ease 0s;
+    }
 
-      .nav__links li a {
-        transition: all 0.3s ease 0s;
-      }
+    .nav__links li a:hover {
+      color: white;
+    }
 
-      .nav__links li a:hover {
-        color: white;
-      }
+    /*****************************************************************/
 
-      /*****************************************************************/
+    .form-box {
+      width: 92%;
+      height: 80%;
+      position: relative;
+      margin: 1% auto;
+      background-color: #ffff;
+      padding: 5px;
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+    span {
+      color: #777;
+      font-size: 12px;
+      bottom: 66px;
+      position: absolute;
+    }
 
-      .form-box {
-        width: 1500px;
-        height: 800px;
-        position: relative;
-        margin: 3% auto;
-        background-color: #ffff;
-        padding: 5px;
-        overflow: hidden;
-      }
-      .button-box {
-        width: 220px;
-        margin: 35px auto;
-        position: relative;
-        box-shadow: 0 0 20px 9px #ff61241f;
-        border-radius: 30px;
-      }
-      .toggle-btn {
-        padding: 10px 30px;
-        cursor: pointer;
-        background: transparent;
-        border: 0;
-        outline: none;
-        position: relative;
-      }
-      #btn {
-        top: 0;
-        left: 0;
-        position: absolute;
-        width: 110px;
-        height: 100%;
-        background: linear-gradient(to right, #ff105f, #ffad06);
-        border-radius: 30px;
-        transition: 0.5s;
-      }
-      .input-group {
-        top: 180px;
-        position: absolute;
-        width: 280px;
-        transition: 0.5s;
-      }
-      .input-field {
-        width: 100%;
-        padding: 10px 0;
-        margin: 5px 0;
-        border-left: 0;
-        border-top: 0;
-        border-right: 0;
-        border-bottom: 1px solid #999;
-        outline: none;
-        background: transparent;
-      }
-      .submit-btn {
-        width: 85%;
-        padding: 10px 30px;
-        margin-top: 150px;
-        cursor: pointer;
-        display: block;
-        margin: 30px auto;
-        background: linear-gradient(to right, #ff105f, #ffad06);
-        border: 0;
-        outline: none;
-        border-radius: 30px;
-      }
-      .check-box {
-        margin: 30px 10px 30px 0;
-      }
-      span {
-        color: #777;
-        font-size: 12px;
-        bottom: 66px;
-        position: absolute;
-      }
-      #login {
-        left: 50px;
-      }
+    .title {
+      text-align: center;
+      height: 18px;
+      width: 100%;
+      display: block;
+      margin: 20px 0px;
+      color: #777;
+    }
 
-      .title {
-        text-align: center;
-        height: 18px;
-        right: 300px;
-        width: 100%;
-        display: block;
-        margin: 30px 0px;
-        color: #777;
-      }
+    #h2-title {
+      width: 100%;
+      padding-bottom: 20px;
+    }
+    .content-table {
+      position: relative;
+      border-collapse: collapse;
+      margin: auto ;
+      width: 100%;
+      min-width: 800px;
+      max-height: 1000px;
+      font-size: 0.8em;
+      border-radius: 5px 5px 0 0;
+      overflow: hidden;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    }
+    .content-table thead tr {
+      background-color: #ffad06;
+      color: #fff;
+      text-align: left;
+      font-weight: bold;
+    }
+    .content-table tbody tr {
+      margin: 0%;
+      color: #777777;
+      background-color: #f3f3f3;
+      text-align: center;
+      font-weight: bold;
+    }
 
-      #h2-title {
-        width: 100%;
-        padding-bottom: 20px;
-      }
-      .content-table {
-        position: relative;
-        border-collapse: collapse;
-        margin: auto ;
-        width: 100%;
-        min-width: 800px;
-        max-height: 1000px;
-        font-size: 0.9em;
-        border-radius: 5px 5px 0 0;
-        overflow: hidden;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-      }
-      .content-table thead tr {
-        background-color: #ffad06;
-        color: #fff;
-        text-align: left;
-        font-weight: bold;
-      }
+    .content-table th,
+    .content-table td {
+      padding: 12px 15px;
+    }
 
-      .content-table th,
-      .content-table td {
-        padding: 12px 15px;
-      }
+    .content-table tbody tr {
+      border-bottom: 1px solid #ddd;
+    }
+    .content-table tbody tr:nth-of-type(even) {
+      background-color: #f3f3f3;
+    }
 
-      .content-table tbody tr {
-        border-bottom: 1px solid #ddd;
-      }
-      .content-table tbody tr:nth-of-type(even) {
-        background-color: #f3f3f3;
-      }
+    .content-table tbody tr:last-of-type {
+      border-bottom: 2px solid #ffad06;
+    }
 
-      .content-table tbody tr:last-of-type {
-        border-bottom: 2px solid #ffad06;
-      }
-
-    </style>
+  </style>
 
 
-  </head>
+</head>
 
-  <body>
-    <div class="hero">
-      <header>
-        <img src="../../../../../htmld/navbarWithTable/logo-yeni-2.png" alt="logo" />
-        <nav>
-          <ul class="nav__links">
-            <li><a href="#">Product Category List</a></li>
-            <li><a href="#">Product Details List</a></li>
-            <li><a href="#">Product Inquiry</a></li>
-            <li><a href="#">Raise Complaint</a></li>
-            <li><a href="#">Complaint List</a></li>
-            <li><a href="#">Product Inquiry List</a></li>
-          </ul>
-        </nav>
-        <select class="input-opt">
-          <option selected disabled id="opt">
-            <a href="#">Hello, User</a>
-          </option>
-          <option><a href="#">My Profile</a></option>
-          <option><a href="#">Change Password</a></option>
-          <option><a href="#">Logout</a></option>
-        </select>
-      </header>
-      <div class="form-box">
-        <form>
-          <div class="title">
-            <h2 id="h2-title">Product Inquiry List</h2>
-          </div>
-          <table class="content-table table table-bordered table-striped " id="productinquiry-table">
-            <thead>
-              <tr>
-                <th>Id</th>
-                <th>UUID</th>
-                <th>Product Category</th>
-                <th>Details</th>
-                <th>E-mail</th>
-                <th>Action</th>
-                <th>Answer</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr th:each="productInquiry:${productInquiry}">
-                <td th:text="${productInquiry.id}"/>
-                <td th:text="${productInquiry.uuid}"/>
-                <td th:text="${productInquiry.productCategory}"/>
-                <td th:text="${productInquiry.details}"/>
-                <td th:text="${productInquiry.mail}"/>
-                <td>
-                  <a href="#" class="btn btn-info">Update</a>
-                  <a href="#" class="btn btn-info">Delete</a>
-                </td>
-                <td th:text="${productInquiry.answer}"/>
-              </tr>
-
-            </tbody>
-          </table>
-        </form>
+<body>
+<div class="hero">
+  <header>
+    <img src="../../../../../htmld/navbarWithTable/logo-yeni-2.png" alt="logo" />
+    <nav>
+      <ul class="nav__links">
+        <li><a href="#">Product Category List</a></li>
+        <li><a href="#">Product Details List</a></li>
+        <li><a href="#">Product Inquiry</a></li>
+        <li><a href="#">Raise Complaint</a></li>
+        <li><a href="#">Complaint List</a></li>
+        <li><a href="#">Product Inquiry List</a></li>
+      </ul>
+    </nav>
+    <select class="input-opt">
+      <option selected disabled id="opt">
+        <a href="#">Hello, User</a>
+      </option>
+      <option><a href="#">My Profile</a></option>
+      <option><a href="#">Change Password</a></option>
+      <option><a href="#">Logout</a></option>
+    </select>
+  </header>
+  <div class="form-box">
+    <form>
+      <div class="title">
+        <h2 id="h2-title">Product Inquiry List</h2>
       </div>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.js"></script>
-    <script>
-      $(document).ready(function (){
-        $("#productinquiry-table").DataTable();
-      })
-    </script>
-  </body>
+      <table class="content-table table table-bordered table-striped " id="productinquiry-table">
+        <thead>
+        <tr>
+          <th>Image</th>
+          <th>Id</th>
+          <th>UUID</th>
+          <th>Product Category</th>
+          <th>Details</th>
+          <th>E-mail</th>
+          <th>Action</th>
+          <th>Answer</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="productInquiry:${productInquiry}">
+          <td><img th:src="@{/images/bg.png}" style="width: 100px; height: 100px"/></td>
+          <td th:text="${productInquiry.id}"/>
+          <td th:text="${productInquiry.uuid}"/>
+          <td th:text="${productInquiry.productCategory}"/>
+          <td th:text="${productInquiry.details}"/>
+          <td th:text="${productInquiry.mail}"/>
+
+          <td>
+            <a th:href="@{/api/v1/inquiry/showUpdateForm(id=${productInquiry.id})}" class="btn btn-info">Update</a>
+            <a th:href="@{/api/v1/inquiry/deleteInquiry(id=${productInquiry.id})}" class="btn btn-info">Delete</a>
+          </td>
+          <td th:text="${productInquiry.answer}"/>
+        </tr>
+
+        </tbody>
+      </table>
+    </form>
+  </div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.js"></script>
+<script>
+  $(document).ready(function (){
+    $("#productinquiry-table").DataTable();
+  })
+</script>
+</body>
 </html>
