--- a/src/main/resources/templates/raiseComplaint.html
+++ b/src/main/resources/templates/raiseComplaint.html
@@ -17,7 +17,7 @@
       height: 100%;
       width: 100%;
       background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url(bg.png);
+      url(https://cdn.wperp.com/uploads/2019/08/231-1920x768.png);
       background-position: center;
       background-size: cover;
       position: absolute;
