design login page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
         overflow: hidden;
       }
       .button-box {
-        width: 220px;
+        width: 110px;
         margin: 35px auto;
         position: relative;
         box-shadow: 0 0 20px 9px #ff61241f;
@@ -77,19 +77,19 @@
         padding: 10px 30px;
         cursor: pointer;
         display: block;
-        margin: auto;
+        margin: 20px auto 5px auto;
         background: linear-gradient(to right, #ff105f, #ffad06);
         border: 0;
         outline: none;
         border-radius: 30px;
       }
       .check-box {
-        margin: 30px 10px 30px 0;
+        margin: 30px 10px 20px 0;
       }
-      span {
+      label {
         color: #777;
         font-size: 12px;
-        bottom: 66px;
+        bottom: 100px;
         position: absolute;
       }
       #login {
@@ -100,7 +100,7 @@
       }
       .title {
         width: 85%;
-        padding: 10px 110px;
+        padding: 100px 110px;
         display: block;
         margin: auto;
         color: #777;
@@ -110,15 +110,6 @@
   <body>
     <div class="hero">
       <div class="form-box">
-        <div class="button-box">
-          <div id="btn"></div>
-          <button type="button" class="toggle-btn" onclick="login()">
-            Log In
-          </button>
-          <button type="button" class="toggle-btn" onclick="register()">
-            Register
-          </button>
-        </div>
         <div class="title">
           <h2>CRM System</h2>
         </div>
@@ -137,64 +128,10 @@
             placeholder="Enter Password"
             required
           />
-          <input type="checkbox" class="check-box" /><span
-            >Remember Password</span
-          >
-
           <button   type="submit" class="submit-btn">Log in</button>
-        </form>
-        <form  method="post" id="register" class="input-group">
-          <input
-            type="text"
-
-            class="input-field"
-            placeholder="User Name"
-            required
-          />
-          <input
-            type="email"
-
-            class="input-field"
-            placeholder="Email"
-            required
-          />
-          <input
-            type="password"
-
-            class="input-field"
-            placeholder="Password"
-            required
-          />
-          <input
-            type="tel"
-
-            class="input-field"
-            placeholder="Phone Number"
-            required
-          />
-          <input type="checkbox" class="check-box" /><span
-            >I agree to the terms & conditions</span
-          >
-          <button  type="submit" class="submit-btn">Register</button>
+          <button   type="submit" class="submit-btn">Register</button>
         </form>
       </div>
     </div>
-
-    <script>
-      var x = document.getElementById("login");
-      var y = document.getElementById("register");
-      var z = document.getElementById("btn");
-
-      function register() {
-        x.style.left = "-400px";
-        y.style.left = "50px";
-        z.style.left = "110px";
-      }
-      function login() {
-        x.style.left = "50px";
-        y.style.left = "450px";
-        z.style.left = "0px";
-      }
-    </script>
   </body>
 </html>
