--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -94,6 +94,17 @@
       outline: none;
       border-radius: 30px;
     }
+    .submit-btn-2{
+      width: 238px;
+      padding: 10px 30px;
+      cursor: pointer;
+      display: block;
+      margin: 225px 85px 5px auto;
+      background: linear-gradient(to right, #ff105f, #ffad06);
+      border: 0;
+      outline: none;
+      border-radius: 30px;
+    }
     .check-box {
       margin: 30px 10px 30px 0;
     }
@@ -151,8 +162,8 @@
               required
       />
       <button th:href="@{/login}" type="submit" class="submit-btn">Register</button>
-      <button th:href="@{/login}" type="submit" class="submit-btn">Back</button>
     </form>
+      <button th:href="@{/login}" type="submit" class="submit-btn-2">Back</button>
   </div>
 </div>
 
