--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -141,7 +141,7 @@
           />
           <button   type="submit" class="submit-btn">Log in</button>
         </form>
-        <button  th:href="@{/saveUser}" type="submit" class="submit-btn-2">Register</button>
+        <a  th:href="@{/saveUser}"  class="submit-btn-2">Register</a>
       </div>
     </div>
   </body>
