--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -163,7 +163,7 @@
       />
       <button th:href="@{/login}" type="submit" class="submit-btn">Register</button>
     </form>
-      <button th:href="@{/login}" type="submit" class="submit-btn-2">Back</button>
+      <a th:href="@{/login}"  class="submit-btn-2">Back</a>
   </div>
 </div>
 
