--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -95,7 +95,11 @@
       border-radius: 30px;
     }
     .submit-btn-2{
-      width: 238px;
+      width: 178px;
+      text-align: center;
+      text-decoration: none;
+      font-family: sans-serif;
+      font-size: 13.3px;
       padding: 10px 30px;
       cursor: pointer;
       display: block;
@@ -123,6 +127,9 @@
       display: block;
       margin: auto;
       color: #777;
+    }
+    a:visited{
+      color: black;
     }
   </style>
 </head>
