--- a/src/main/resources/templates/product-category-list.html
+++ b/src/main/resources/templates/product-category-list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -174,7 +175,7 @@
     <nav>
       <ul class="nav__links">
         <li><a href="#">Product Category List</a></li>
-        <li><a href="#">Product Details List</a></li>
+        <li><a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product Details List</a></li>
         <li><a href="#">Product Inquiry</a></li>
         <li><a href="#">Raise Complaint</a></li>
         <li><a href="#">Complaint List</a></li>
